moved index.html from dist to root

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             </nav>
         </header>
     </div>
-    <script src="main.js"></script>
+    <script src="/Users/mhamed/TOP/repos/Restaurant-Page/restau/Restaurant-Page/dist/main.js"></script>
 </body>
 </html>
