moved index.html from dist to root

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restau</title>
-    <link rel="stylesheet" href="/Users/mhamed/TOP/repos/Restaurant-Page/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +19,6 @@
             </nav>
         </header>
     </div>
-    <script src="/Users/mhamed/TOP/repos/Restaurant-Page/restau/Restaurant-Page/dist/main.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
